docs/yours/your-deployment.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
    creationTimestamp: "2026-01-02T11:18:36Z"
    generation: 1
    labels:
      app: bartu-demo-ws-96aff083-e1a9-4a76-b51f-43cf67a945e3
      app.kubernetes.io/component: session
      app.kubernetes.io/part-of: theia-cloud
      theia-cloud.io/app-definition: sample-app
      theia-cloud.io/session: bartu-demo-ws
      theia-cloud.io/user: bartu
    name: session-bartu-sample-app-43cf67a945e3
    namespace: default
    ownerReferences:
    - apiVersion: example.suleyman.io/v1
      blockOwnerDeletion: true
      controller: true
      kind: Session
      name: bartu-demo-ws
      uid: 96aff083-e1a9-4a76-b51f-43cf67a945e3
    resourceVersion: "105526"
    uid: 3d1e2c9a-9e5d-46a4-8e0c-4b894ed51ea9
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: bartu-demo-ws-96aff083-e1a9-4a76-b51f-43cf67a945e3
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        annotations:
          kubernetes.io/egress-bandwidth: 30000k
          kubernetes.io/ingress-bandwidth: 30000k
        creationTimestamp: null
        labels:
          app: bartu-demo-ws-96aff083-e1a9-4a76-b51f-43cf67a945e3
          app.kubernetes.io/component: session
          app.kubernetes.io/part-of: theia-cloud
          theia-cloud.io/app-definition: sample-app
          theia-cloud.io/session: bartu-demo-ws
          theia-cloud.io/user: bartu
      spec:
        automountServiceAccountToken: false
        containers:
        - args:
          - --config=/etc/oauth2-proxy.cfg
          - --authenticated-emails-file=/emails/authenticated-emails-list
          - --gcp-healthchecks
          - --reverse-proxy
          - --skip-auth-route=/monitor/*
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.6.0
          imagePullPolicy: IfNotPresent
          name: oauth2-proxy
          ports:
          - containerPort: 5000
            name: web
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /etc/oauth2-proxy.cfg
            name: oauth2-proxy-config
            subPath: oauth2-proxy.cfg
          - mountPath: /templates
            name: oauth2-templates
          - mountPath: /emails
            name: oauth2-emails
        - env:
          - name: THEIACLOUD_APP_ID
            value: sample-app-test
          - name: THEIACLOUD_SERVICE_URL
            value: http://session-bartu-sample-app-43cf67a945e3:3000
          - name: THEIACLOUD_SESSION_UID
            value: 96aff083-e1a9-4a76-b51f-43cf67a945e3
          - name: THEIACLOUD_SESSION_NAME
            value: bartu-demo-ws
          - name: THEIACLOUD_SESSION_USER
            value: bartu
          - name: THEIACLOUD_SESSION_URL
            value: http://theia.localtest.me/96aff083-e1a9-4a76-b51f-43cf67a945e3/
          - name: THEIACLOUD_SESSION_SECRET
            value: henkansecret
          - name: THEIACLOUD_KEYCLOAK_URL
            value: http://192.168.19.251:8080/auth/
          - name: THEIACLOUD_KEYCLOAK_REALM
            value: henkan
          - name: THEIACLOUD_KEYCLOAK_CLIENT_ID
            value: henkan-designer
          - name: COMMIT_GENAI_ENDPOINT
            value: https://example.com/webhook/xyz
          - name: EMAIL
            value: bartu@globalmaksimum.com
          - name: GIT_AUTHOR_NAME
            value: bartu
          - name: GIT_SSL_NO_VERIFY
            value: "true"
          - name: HENKAN_GIT_EMAIL
            value: bartu@globalmaksimum.com
          - name: HENKAN_GIT_USER
            value: bartu
          - name: HENKAN_META_API_URL
            value: http://henkan-metaapi.henkan-metaapi
          - name: HENKAN_PROJECT_GIT_URL
            value: https://github.com/GlobalMaksimum/henkan-etl-flow-project.git
          - name: HENKAN_PROJECT_NAME
            value: busra
          image: ghcr.io/eclipse-theia/theia-blueprint/theia-ide:latest
          imagePullPolicy: IfNotPresent
          name: theia
          ports:
          - containerPort: 3000
            name: application
            protocol: TCP
          resources:
            limits:
              cpu: "2"
              memory: 1200Mi
            requests:
              cpu: 100m
              memory: 1000Mi
          securityContext:
            runAsGroup: 101
            runAsUser: 101
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /home/henkan/project
            name: workspace
        dnsPolicy: ClusterFirst
        imagePullSecrets:
        - name: regcred
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext:
          fsGroup: 101
        terminationGracePeriodSeconds: 30
        volumes:
        - name: workspace
          persistentVolumeClaim:
            claimName: ws-bartu-sample-app-b4bc934aa992
        - configMap:
            defaultMode: 420
            name: session-proxy-bartu-sample-app-43cf67a945e3
          name: oauth2-proxy-config
        - configMap:
            defaultMode: 420
            name: oauth2-templates
          name: oauth2-templates
        - configMap:
            defaultMode: 420
            name: session-email-bartu-sample-app-43cf67a945e3
          name: oauth2-emails
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2026-01-02T11:18:39Z"
      lastUpdateTime: "2026-01-02T11:18:39Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2026-01-02T11:18:36Z"
      lastUpdateTime: "2026-01-02T11:18:39Z"
      message: ReplicaSet "session-bartu-sample-app-43cf67a945e3-d94cf65f8" has successfully
        progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 1
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
