docs/yours/your-service.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2026-01-02T11:18:36Z"
    labels:
      app: bartu-demo-ws-96aff083-e1a9-4a76-b51f-43cf67a945e3
      app.kubernetes.io/component: session
      app.kubernetes.io/part-of: theia-cloud
      theia-cloud.io/app-definition: sample-app
      theia-cloud.io/session: bartu-demo-ws
      theia-cloud.io/user: bartu
    name: session-bartu-sample-app-43cf67a945e3
    namespace: default
    ownerReferences:
    - apiVersion: example.suleyman.io/v1
      blockOwnerDeletion: true
      controller: true
      kind: Session
      name: bartu-demo-ws
      uid: 96aff083-e1a9-4a76-b51f-43cf67a945e3
    resourceVersion: "105497"
    uid: ae26d1f1-79b6-43bd-ab1e-398773cc6bc7
  spec:
    clusterIP: 10.101.81.29
    clusterIPs:
    - 10.101.81.29
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: web
    selector:
      app: bartu-demo-ws-96aff083-e1a9-4a76-b51f-43cf67a945e3
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
